--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -895,6 +895,12 @@ h4 {
 .often-questions .p-heading {
   text-align: center;
 }
+.often-questions p.active-style span {
+  color: #E950D7;
+  font-weight: 900;
+  text-decoration: none;
+  border: 0;
+}
 .often-questions .accordion-heading {
   font-size: 2.2rem;
   cursor: pointer;
@@ -905,9 +911,26 @@ h4 {
 .often-questions .accordion-heading span {
   border-bottom: 2px dotted #333;
 }
+.often-questions .accordion-heading.active+.accordion-block {
+  display:block;
+}
 .often-questions .accordion-block {
-  margin-top: 1rem;
   background-color: #f7e7e6;
+  max-height: 0px;
+  opacity: 0;
+  transition: all 0.3s ease-out;
+  overflow: hidden;
+  /* display: none;
+  margin-top: 1rem;
+  padding: 3rem 4rem; */
+}
+.often-questions .accordion-block.active-content {
+  background-color: #f7e7e6;
+  max-height: 0px;
+  opacity: 1;
+  transition: all 0.3s ease-out;
+  overflow: visible;
+  margin-top: 1rem;
   padding: 3rem 4rem;
 }
 .often-questions .accordion-block:before {
